dist/1.0/bin/sample/retrieveUnpackaged/objects/IntegrationAccount__c.object
<CustomObject>
    <description>Queue for Account Integration messages</description>
    <fields>
        <fullName>AccountId__c</fullName>
        <label>Account Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountNumber__c</fullName>
        <label>Account Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountOwner__c</fullName>
        <label>Account Owner</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountSite__c</fullName>
        <label>Account Site</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountType__c</fullName>
        <label>Account Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActionType__c</fullName>
        <label>Action Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AnnualRevenue__c</fullName>
        <label>Annual Revenue</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactCity__c</fullName>
        <label>Contact City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactCountry__c</fullName>
        <label>Contact Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactPostalCode__c</fullName>
        <label>Contact Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactState__c</fullName>
        <label>Contact State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactStreet__c</fullName>
        <label>Contact Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedBy__c</fullName>
        <label>Created By</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <label>Created Date</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GTSLocation__c</fullName>
        <label>GTS Location</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IdentificationType__c</fullName>
        <label>Identification Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedBy__c</fullName>
        <label>Last Modified By</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocalAccountId__c</fullName>
        <label>Local Account Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocalAccountOwner__c</fullName>
        <label>Local Account Owner</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocalRecordId__c</fullName>
        <label>Local Record Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MessageResult__c</fullName>
        <label>Message Result</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberOfEmployees__c</fullName>
        <label>Number of Employees</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ownership__c</fullName>
        <label>Ownership</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentAccount__c</fullName>
        <label>Parent Account</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Care__c</fullName>
        <label>Primary Care</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordType__c</fullName>
        <label>Record Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RegistrationCity__c</fullName>
        <label>Registration City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RegistrationCountry__c</fullName>
        <label>Registration Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RegistrationPostalCode__c</fullName>
        <label>Registration Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RegistrationState__c</fullName>
        <label>Registration State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RegistrationStreet__c</fullName>
        <label>Registration Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SICCode__c</fullName>
        <label>SIC Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <label>Segment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SiteType__c</fullName>
        <label>Site Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaxId__c</fullName>
        <label>Tax Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TickerSymbol__c</fullName>
        <label>Ticker Symbol</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Account Integration</label>
    <nameField>
        <displayFormat>AC{0000000000}</displayFormat>
        <label>MessageID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Integration</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>